--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Lau de Hoop">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="https://kit.fontawesome.com/16946e2d22.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
